# DyCall

./: .pre-commit-config.yaml  .prettierrc.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  constraints-dev.txt  constraints.txt  dev-constraints.txt  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: integrity.yml  publish.yml
dycall/: __main__.py  _widgets.py  about.py  app.py  demangler.py  desktop-app.json  exports.py  function.py  output.py  picker.py  runner.py  status_bar.py  top_menu.py  types.py  util.py
dycall/img/: __init__.py
tests/: conftest.py  img_checksums.csv  test_app.py  test_check_resources.py
