[metadata]
name = dycall
version = file: VERSION
description = Run exported symbols from native libraries
long_description = file: README.md
long_description_content_type = text/markdown
author = demberto
author_email = demberto@protonmail.com
license = MIT
url = https://github.com/demberto/dycall
project_urls =
    Repository = https://github.com/demberto/dycall/
    Changelog = https://github.com/demberto/dycall/blob/master/CHANGELOG.md
    Tracker = https://github.com/demberto/dycall/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    appdirs>=1.4.4      # Find a place to store settings
    cxxfilt>=0.3.0      # Linux, MacOS demangler
    desktop_app>=0.2.10 # Taskbar icon, shortcuts
    darkdetect>=0.5.1   # Detect OS theme
    EasySettings>=4.0.1 # App settings
    ttkbootstrap>=1.7.1 # Light & dark themes, etc.
    lief>=0.11.5        # PE, MachO & ELF parser
    tksheet>=1.7.1      # Highly customizable table

[options.entry_points]
gui_scripts =
    dycall-gui = desktop_app:entry_point

[options.package_data]
dycall = deskto-app.json
dycall.img = *
dycall.msg = *.msg
